[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/music/[Ado】うっせぇわ-HQ.wav" type="AudioStream" id=1]
[ext_resource path="res://Conductor.gd" type="Script" id=2]
[ext_resource path="res://JudgementArea2D.tscn" type="PackedScene" id=3]

[node name="Conductor" type="Node2D"]
script = ExtResource( 2 )
starting_note_positions = [ Vector2( 300, -50 ), Vector2( 400, -50 ), Vector2( 500, -50 ), Vector2( 600, -50 ) ]
beats_per_fall = 5.3

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="JudgementArea2D_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 300, 500 )

[node name="JudgementArea2D_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 400, 500 )

[node name="JudgementArea2D_3" parent="." instance=ExtResource( 3 )]
position = Vector2( 500, 500 )

[node name="JudgementArea2D_4" parent="." instance=ExtResource( 3 )]
position = Vector2( 600, 500 )
